Fix overflow for device preview

--- a/packages/block-editor/src/components/block-list/content.scss
+++ b/packages/block-editor/src/components/block-list/content.scss
@@ -453,7 +453,7 @@ _::-webkit-full-page-media, _:future, :root .has-multi-selection .block-editor-b
 	}
 }
 
-.__iframe__html {
+.block-editor-iframe__html {
 	transition: all 0.3s;
 	background-color: $gray-300;
 	transform-origin: top center;
